Fix sequence issue + truncate labels + UI improvements

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -440,9 +440,13 @@ table.table a:hover {
 .selectable-text {
     font-size: 1rem;
     color: #000000;
-    display: flex;
-    align-items: center;
-    line-height: 1.25;
+    display: block;      /* Viktigt – inte flex */
+    line-height: 1.3;
+    flex: 1;
+    min-width: 0;      /* För att möjliggöra text-truncation */
+    white-space: nowrap; 
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 /* ---------------------------------------------------
